--- a/kustomization/components/ara/deployment.yml
+++ b/kustomization/components/ara/deployment.yml
@@ -19,7 +19,7 @@ spec:
             - name: ARA_DATABASE_ENGINE
               value: django.db.backends.mysql
             - name: ARA_DATABASE_HOST
-              value: ara-mariadb-galera
+              value: ara-galera-db-primary
             - name: ARA_DATABASE_NAME
               value: ara
             - name: ARA_DATABASE_PASSWORD
