--- a/kustomization/components/ara/kustomization.yml
+++ b/kustomization/components/ara/kustomization.yml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+images:
+  - name: mariadb
+    newTag: 11.1.2
 namespace: ara
 resources:
+  - cronjob.yml
   - deployment.yml
   - ingress.yml
+  - mariadb.yml
   - service.yml
-  - cronjob.yml
