add namespace to mariadb operator

--- a/kustomization/overlays/prod/olm-operators/mariadboperator.yml
+++ b/kustomization/overlays/prod/olm-operators/mariadboperator.yml
@@ -3,6 +3,7 @@ apiVersion: helm.mariadb.mmontes.io/v1alpha1
 kind: MariadbOperator
 metadata:
   name: mariadb-operator
+  namespace: operators
 spec:
   clusterName: cluster.local
   metrics:
