--- a/kustomization/base/kube-vip/daemonset.yml
+++ b/kustomization/base/kube-vip/daemonset.yml
@@ -28,7 +28,7 @@ spec:
         - name: port
           value: "6443"
         - name: vip_interface
-          value: man
+          value: services
         - name: vip_cidr
           value: "32"
         - name: cp_enable
