--- a/kustomization/base/argo-proj/application/traefik-crds.yml
+++ b/kustomization/base/argo-proj/application/traefik-crds.yml
@@ -2,15 +2,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: traefik
+  name: traefik-crds
   namespace: argocd
 spec:
   project: default
   source:
+    path: kustomization/base/traefik-crds
     repoURL: https://github.com/sdwilsh/ansible-playbooks
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: traefik
   syncPolicy:
     automated: {}
