--- a/kustomization/components/ara/kustomization.yml
+++ b/kustomization/components/ara/kustomization.yml
@@ -1,11 +1,10 @@
 ---
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+apiVersion: kustomize.config.k8s.io/v1alpha1
+kind: Component
 
 images:
   - name: mariadb
     newTag: 11.1.2
-namespace: ara
 resources:
   - cronjob.yml
   - deployment.yml
