--- a/kustomization/overlays/prod/ara/kustomization.yml
+++ b/kustomization/overlays/prod/ara/kustomization.yml
@@ -2,6 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+components:
+  - ../../../components/ara
 configMapGenerator:
   - name: settings-configmap
     files:
@@ -18,4 +20,3 @@ patches:
       name: ara-ingress
 resources:
   - namespace.yml
-  - ../../../components/ara
