--- a/kustomization/overlays/prod/olm-operators/networkaddonsconfig.yml
+++ b/kustomization/overlays/prod/olm-operators/networkaddonsconfig.yml
@@ -5,5 +5,17 @@ metadata:
   name: cluster
   namespace: operators
 spec:
-  multus: {}
   linuxBridge: {}
+  multus: {}
+  # Until there are three control plane nodes, this schedules on all linux nodes.
+  placementConfiguration:
+    infra:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                - key: kubernetes.io/os
+                  operator: in
+                  values:
+                    - linux
