move network addons operator into its own, privledged namespace

--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -29,6 +29,7 @@ patches:
 resources:
   - ../../../base/argo-proj
   - application/ara.yml
+  - application/network-addons-operator.yml
   - application/olm-operators.yml
   - application/prometheus.yml
   - application/traefik-man.yml
