--- a/kustomization/overlays/prod/network-addons-operator/networkaddonsconfig.yml
+++ b/kustomization/overlays/prod/network-addons-operator/networkaddonsconfig.yml
@@ -3,7 +3,7 @@ apiVersion: networkaddonsoperator.network.kubevirt.io/v1
 kind: NetworkAddonsConfig
 metadata:
   name: cluster
-  namespace: operators
+  namespace: network-addons-operator
 spec:
   linuxBridge: {}
   multus: {}
