--- a/kustomization/overlays/prod/olm-operators/networkaddonsconfig.yml
+++ b/kustomization/overlays/prod/olm-operators/networkaddonsconfig.yml
@@ -3,7 +3,7 @@ apiVersion: networkaddonsoperator.network.kubevirt.io/v1
 kind: NetworkAddonsConfig
 metadata:
   name: cluster
-  namespace: network-addons-operator
+  namespace: operators
 spec:
   linuxBridge: {}
   multus: {}
