allow renovate to migrate the config for me

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "extends": [
     "config:base"
   ],
+  "configMigration": true,
   "packageRules": [
     {
       "matchPackageNames": ["quay.io/kairos/kairos-ubuntu-22-lts"],
