--- a/kustomization/base/operator-lifecycle-manager/kustomization.yml
+++ b/kustomization/base/operator-lifecycle-manager/kustomization.yml
@@ -2,6 +2,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+patches:
+  # A number of operators do not work in the baseline pod-security profile, alas.
+  - target:
+      kind: Namespace
+      name: operators
+    path: patches/downgrade_pod-security.yml
 resources:
   # renovate: datasource=github-releases
   - https://github.com/operator-framework/operator-lifecycle-manager/releases/download/v0.25.0/crds.yaml
