--- a/kustomization/overlays/prod/olm-operators/kustomization.yml
+++ b/kustomization/overlays/prod/olm-operators/kustomization.yml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - kubevirt.yml
   - mariadboperator.yml
   - networkaddonsconfig.yml
   - subscriptions.yml
