--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -32,4 +32,5 @@ resources:
   - application/generic-device-plugin.yml
   - application/olm-operators.yml
   - application/prometheus.yml
+  - application/traefik-home.yml
   - application/traefik-man.yml
