--- a/kustomization/base/traefik-crds/patches/update_subjects.yml
+++ b/kustomization/base/traefik-crds/patches/update_subjects.yml
@@ -6,4 +6,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: traefik-ingress-controller
+    namespace: traefik-home
+  - kind: ServiceAccount
+    name: traefik-ingress-controller
     namespace: traefik-man
