add open services

--- a/firewall_zones/vyos_home/services/from-home-ipv4.yml
+++ b/firewall_zones/vyos_home/services/from-home-ipv4.yml
@@ -14,3 +14,8 @@
   destination:
     group:
       address_group: HOME-SERVICES-v4
+- description: Allow access to OPEN services
+  action: accept
+  destination:
+    group:
+      address_group: OPEN-SERVICES-v4
