--- a/kustomization/overlays/prod/purelb/kustomization.yml
+++ b/kustomization/overlays/prod/purelb/kustomization.yml
@@ -12,5 +12,9 @@ patches:
     target:
       name: home-servicegroup
       kind: ServiceGroup
+  - path: patches/set_open_pool.yml
+    target:
+      name: open-servicegroup
+      kind: ServiceGroup
 resources:
   - ../../../base/purelb
