--- a/firewall_zones/vyos_home/services/from-man-ipv4.yml
+++ b/firewall_zones/vyos_home/services/from-man-ipv4.yml
@@ -14,3 +14,8 @@
   source:
     group:
       address_group: SERVICE-TALKERS-v4
+- description: Allow access to OPEN services
+  action: accept
+  destination:
+    group:
+      address_group: OPEN-SERVICES-v4
