--- a/kustomization/overlays/prod/purelb/patches/set_home_pool.yml
+++ b/kustomization/overlays/prod/purelb/patches/set_home_pool.yml
@@ -6,5 +6,6 @@ metadata:
 spec:
   local:
     v4pool:
+      # All addresses of 10.11.1.32/27
       pool: 10.11.1.32-10.11.1.63
       subnet: 10.11.0.0/23
