--- a/kustomization/components/traefik/kustomization.yml
+++ b/kustomization/components/traefik/kustomization.yml
@@ -21,6 +21,10 @@ patches:
       kind: Deployment
       name: traefik-deployment
 resources:
+    # renovate: datasource=github-releases
+  - https://raw.githubusercontent.com/traefik/traefik/v2.10.5/docs/content/reference/dynamic-configuration/kubernetes-crd-definition-v1.yml
+    # renovate: datasource=github-releases
+  - https://raw.githubusercontent.com/traefik/traefik/v2.10.5/docs/content/reference/dynamic-configuration/kubernetes-crd-rbac.yml
   - certificate.yml
   - serviceaccount.yml
   - deployment.yml
