--- a/kustomization/overlays/prod/traefik/kustomization.yml
+++ b/kustomization/overlays/prod/traefik/kustomization.yml
@@ -2,7 +2,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: traefik-man
+components:
+  - ../../../components/traefik
+namespace: traefik
 patches:
   - path: patches/change_ingress_host.yml
     target:
@@ -12,10 +14,18 @@ patches:
     target:
       kind: Deployment
       name: traefik-deployment
+  - path: patches/set_load_balancer.yml
+    target:
+      kind: Service
+      name: traefik-svc
+  - path: patches/update_subjects.yml
+    target:
+      kind: ClusterRoleBinding
+      name: traefik-ingress-controller
   # Uncomment to debug production issues!
   # - path: patches/set_debug_log_level.yml
   #   target:
   #     kind: Deployment
   #     name: traefik-deployment
 resources:
-  - ../../../base/traefik-man
+  - namespace.yml
