--- a/kustomization/overlays/prod/traefik/patches/set_load_balancer.yml
+++ b/kustomization/overlays/prod/traefik/patches/set_load_balancer.yml
@@ -3,5 +3,5 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    purelb.io/service-group: default # MAN
+    purelb.io/service-group: open-servicegroup
   name: this-is-ignored-but-is-required
