--- a/kustomization/overlays/prod/traefik/patches/update_subjects.yml
+++ b/kustomization/overlays/prod/traefik/patches/update_subjects.yml
@@ -6,4 +6,4 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: traefik-ingress-controller
-    namespace: traefik-man
+    namespace: traefik
