--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -32,3 +32,4 @@ resources:
   - application/generic-device-plugin.yml
   - application/olm-operators.yml
   - application/prometheus.yml
+  - application/traefik.yml
