minor fixes that were missed for traefik

--- a/kustomization/components/traefik/kustomization.yml
+++ b/kustomization/components/traefik/kustomization.yml
@@ -26,6 +26,8 @@ resources:
     # renovate: datasource=github-releases
   - https://raw.githubusercontent.com/traefik/traefik/v2.10.5/docs/content/reference/dynamic-configuration/kubernetes-crd-rbac.yml
   - certificate.yml
+  - ingressclass.yml
+  - ingress.yml
   - serviceaccount.yml
   - deployment.yml
   - service.yml
