--- a/kustomization/overlays/prod/traefik/kustomization.yml
+++ b/kustomization/overlays/prod/traefik/kustomization.yml
@@ -3,17 +3,39 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 components:
+  - ../../../components/authelia
   - ../../../components/traefik
 namespace: traefik
+configMapGenerator:
+  - name: authelia-configmap
+    files:
+      - configmap/authelia-config.yml
+      - configmap/authelia-users.yml
 patches:
-  - path: patches/change_ingress_host.yml
+  - path: patches/change_authelia_ingress_host.yml
+    target:
+      kind: Ingress
+      name: authelia-ingress
+  - path: patches/change_traefik_ingress_host.yml
     target:
       kind: Ingress
       name: traefik-dashboard-ingress
+  - path: patches/set_authelia_configuration.yml
+    target:
+      kind: Deployment
+      name: authelia-deployment
+  - path: patches/set_authelia_middleware_address.yml
+    target:
+      kind: Middleware
+      name: forwardauth-authelia-middleware
   - path: patches/set_ingress_published_service.yml
     target:
       kind: Deployment
       name: traefik-deployment
+  - path: patches/set_traefik_ingress_middleware.yml
+    target:
+      kind: Ingress
+      name: traefik-dashboard-ingress
   - path: patches/set_load_balancer.yml
     target:
       kind: Service
@@ -29,3 +51,4 @@ patches:
   #     name: traefik-deployment
 resources:
   - namespace.yml
+  - persistentvolumeclaim.yml
