protect argo-cd behind authelia

--- a/kustomization/overlays/prod/argo-cd/kustomization.yml
+++ b/kustomization/overlays/prod/argo-cd/kustomization.yml
@@ -8,5 +8,9 @@ patches:
     target:
       kind: Ingress
       name: argo-cd-ingress
+  - path: patches/set_ingress_middleware.yml
+    target:
+      kind: Ingress
+      name: argo-cd-ingress
 resources:
   - ../../../base/argo-cd
