add aventertainment to argo-proj

--- a/kustomization/overlays/prod/argo-proj/kustomization.yml
+++ b/kustomization/overlays/prod/argo-proj/kustomization.yml
@@ -29,6 +29,7 @@ patches:
 resources:
   - ../../../base/argo-proj
   - application/ara.yml
+  - application/aventertainment.yml
   - application/generic-device-plugin.yml
   - application/olm-operators.yml
   - application/prometheus.yml
