export chanttogreen via traefik

--- a/firewall_zones/vyos_home/man/from-services-ipv4.yml
+++ b/firewall_zones/vyos_home/man/from-services-ipv4.yml
@@ -4,3 +4,8 @@
   protocol: icmp
   icmp:
     type_name: any
+- description: Allow access to proxied services
+  action: accept
+  protocol: tcp
+  destination:
+    port: "80"
