--- a/kustomization/overlays/prod/traefik/kustomization.yml
+++ b/kustomization/overlays/prod/traefik/kustomization.yml
@@ -12,6 +12,10 @@ configMapGenerator:
       - configmap/authelia-config.yml
       - configmap/authelia-users.yml
 patches:
+  - path: patches/allow_external_name_services.yml
+    target:
+      kind: Deployment
+      name: traefik-deployment
   - path: patches/change_authelia_ingress_host.yml
     target:
       kind: Ingress
