--- a/kustomization/components/ripper/deployment.yml
+++ b/kustomization/components/ripper/deployment.yml
@@ -7,6 +7,8 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: ripper
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
