move to using nfs for rips

--- a/firewall_zones/vyos_home/man/from-services-ipv4.yml
+++ b/firewall_zones/vyos_home/man/from-services-ipv4.yml
@@ -9,3 +9,10 @@
   protocol: tcp
   destination:
     port: "80"
+- description: Allow access to NFS server
+  action: accept
+  protocol: tcp
+  destination:
+    group:
+      address_group: FILE-SERVER-v4
+      port_group: NFS
