--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -12,7 +12,7 @@
     cmd: "bash -c 'ifdown --force {{ interfaces | join(' ') }}; sleep 1; ifup {{ interfaces | join(' ') }}'"
   become: yes
   vars:
-    interfaces: "[ '{{ ansible_default_ipv4.interface }}' ] + {{ common__additional_ethernet_interfaces | default([]) | map(attribute='name') }}"
+    interfaces: "{{ [ ansible_default_ipv4.interface ] + common__additional_ethernet_interfaces | default([]) | map(attribute='name') }}"
 
 - name: "restart systemd-resolved"
   ansible.builtin.systemd:
