--- a/firewall_zones/vyos_home/services/from-remote-tun-ipv4.yml
+++ b/firewall_zones/vyos_home/services/from-remote-tun-ipv4.yml
@@ -9,3 +9,33 @@
   destination:
     group:
       address_group: OPEN-SERVICES-v4
+  source:
+    group:
+      network_group: REMOTE-VPN-v4
+- description: Allow access to Unifi TCP ports
+  action: accept
+  state:
+    new: true
+  destination:
+    group:
+      address_group: UNIFI-v4
+      port_group: UNIFI-DEVICE-TCP
+  protocol: tcp
+- description: Allow access to Unifi UDP ports
+  action: accept
+  state:
+    new: true
+  destination:
+    group:
+      address_group: UNIFI-v4
+      port_group: UNIFI-DEVICE-UDP
+  protocol: udp
+- description: Allow access to Unifi Web TCP ports
+  action: accept
+  state:
+    new: true
+  destination:
+    group:
+      address_group: UNIFI-v4
+      port_group: UNIFI-WEB-TCP
+  protocol: tcp
