--- a/firewall_zones/vyos_remote/maccabeus/from-wan-ipv4.yml
+++ b/firewall_zones/vyos_remote/maccabeus/from-wan-ipv4.yml
@@ -1,24 +1,19 @@
 ---
-- description: Allow ICMP
-  action: accept
-  protocol: icmp
-  icmp:
-    type_name: any
 - description: Allow access to Unifi TCP ports
   action: accept
   state:
     new: true
-  protocol: tcp
-  source:
+  destination:
     group:
       address_group: UNIFI-v4
       port_group: UNIFI-DEVICE-TCP
+  protocol: tcp
 - description: Allow access to Unifi UDP ports
   action: accept
   state:
     new: true
-  protocol: udp
-  source:
+  destination:
     group:
       address_group: UNIFI-v4
       port_group: UNIFI-DEVICE-UDP
+  protocol: udp
