--- a/group_vars/vyos_home.yml
+++ b/group_vars/vyos_home.yml
@@ -244,6 +244,14 @@ vyos_firewall_global__group:
         - address: 10.117.0.9
         # sdwilsh-desktop
         - address: 10.117.0.31
+    - name: UNIFI-v4
+      description: The v4 address of the Unifi Controller
+      afi: ipv4
+      members:
+        # unifi.tswn.us
+        - address: 10.11.1.64
+        # unifi-inform.tswn.us
+        - address: 10.11.1.65
     - name: VCENTER-v4
       description: vCenter IP Addresses
       afi: ipv4
@@ -291,19 +299,18 @@ vyos_firewall_global__group:
       members:
         - port: 80
         - port: 8080
-    - name: "UNIFI-DEVICE-TCP"
+    - name: UNIFI-DEVICE-TCP
       description: "Ports used by the Unifi Controller to talk to devices over TCP ({{ ansible_managed }})"
       members:
-        - port: "8080"
-        - port: "6789"
-    - name: "UNIFI-DEVICE-UDP"
+        - port: 8080
+    - name: UNIFI-DEVICE-UDP
       description: "Ports used by the Unifi Controller to talk to devices over UDP ({{ ansible_managed }})"
       members:
-        - port: "3478"
-    - name: "UNIFI-WEB-TCP"
+        - port: 3478
+    - name: UNIFI-WEB-TCP
       description: "Ports used by the Unifi Controller for clients ({{ ansible_managed }})"
       members:
-        - port: "8443"
+        - port: 443
 
 vyos_interfaces__ethernet:
   - name: "{{ vyos__lan_interface }}"
