move annotations that are specific to my implementation to my own patches for unifi

--- a/kustomization/overlays/prod/unifi/patches/set_una_ingress_annotations.yml
+++ b/kustomization/overlays/prod/unifi/patches/set_una_ingress_annotations.yml
@@ -3,5 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
+    traefik.ingress.kubernetes.io/router.tls: "true"
   name: this-is-ignored-but-is-required
