--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -9,6 +9,7 @@ bind_acls:
 bind_allow_query:
   - "any"
 bind_dnssec_enable: no
+bind_dnssec_validation: auto
 bind_listen_ipv4:
   - "any"
 bind_listen_ipv6:
