--- a/kustomization/components/hogs-bind9-config/configmap/etc_named.conf
+++ b/kustomization/components/hogs-bind9-config/configmap/etc_named.conf
@@ -56,6 +56,13 @@ zone "tswn.us" IN {
   allow-update { none; };
 };
 
+zone "0.2.10.in-addr.arpa" IN {
+  type master;
+  file "/var/cache/bind/0.2.10.in-addr.arpa";
+  notify yes;
+  allow-update { none; };
+};
+
 zone "0.10.10.in-addr.arpa" IN {
   type master;
   file "/var/cache/bind/0.10.10.in-addr.arpa";
